<resources>
    <string name="app_name">Street Sweeping Reminder</string>

    <string name="day_of_week_label">Day of Week:</string>
    <string name="week_label">Weeks of Month:</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="numeric_one">1</string>
    <string name="numeric_two">2</string>
    <string name="numeric_three">3</string>
    <string name="numeric_four">4</string>
    <string name="numeric_five">5</string>

    <string name="next_sweeping_label"><u>Next Street Sweeping</u></string>

    <string name="accept">Accept</string>
    <string name="schedule_name_hint">Schedule Name</string>
    <string name="today_uppercase">Today</string>
    <string name="today_lowercase">today</string>
    <string name="tomorrow_uppercase">Tomorrow</string>
    <string name="tomorrow_lowercase">tomorrow</string>
    <string name="not_available">No Schedules Set</string>

    <plurals name="numberOfDays">
        <item quantity="one">@string/tomorrow_uppercase</item>
        <item quantity="other">In %d days</item>
    </plurals>

    <string name="notification_label">Reminder Notification</string>
    <string name="when_label">When?</string>
    <string name="day_before">Day Before</string>
    <string name="day_of">Day Of</string>
    <string name="time_label">Time</string>
    <string name="schedules_label"><u>Schedules</u></string>
    <string name="street_sweeping_reminder">Street Sweeping Reminder</string>

    <string name="reminder_notification_channel_name">Reminder Notification</string>
    <string name="reminder_notification_channel_detail">Reminder notification before next sweeping.</string>
    <string name="notification_content_text_default">Street sweeping soon.</string>

    <string name="alarm_notification_channel_name">Alarm</string>
    <string name="alarm_notification_channel_detail">Alarm before next street sweeping.</string>

    <string name="alarm_label">Alarm</string>

    <string name="notification_detail">Street sweeping %s.</string>
    <string name="dismiss">Dismiss</string>
    <string name="missed_alarm_content">Missed alarm.</string>
    <string name="weeks_dialog_error_message">Select at least one week.</string>
    <string name="ok">OK</string>

    <string name="enable_ads">Enable ads</string>
    <string name="silence_alarm">Silence alarm after</string>
    <string name="settings">Settings</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="alarm_timeout_key">com.zachvg.streetsweepingreminder.alarm_timeout_key</string>
    <string name="settings_ads_key">com.zachvg.streetsweepingreminder.settings_ads_key</string>
    <string name="every">Every %s</string>
    <string name="every_week">Every Week</string>
    <string name="sweeping_soon_exclamation">Street Sweeping Soon!</string>
    <string name="adDisabledDialogTitle">Please Help Support This App!</string>
    <string name="dialog_ad_disabled">Ads are annoying, I get it, and that\'s why I made it possible to disable them.
        However, they do help support the time and effort it takes for the development and testing of this app.\n
        \n
        If you don\'t find the ads too annoying, please consider re-enabling them to help support future updates and bug fixes.\n
        \n
        Sincerely,\n
        App Developer
    </string>
    <string name="help">Help</string>
    <string name="help_error_message">Error: Cannot open help file.</string>
    <string name="edit_schedule_description">Edit this street sweeping schedule.</string>
    <string name="delete_schedule_description">Delete this street sweeping schedule.</string>

    <string-array name="alarm_timeout_entries">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>6 minutes</item>
        <item>7 minutes</item>
        <item>8 minutes</item>
        <item>9 minutes</item>
        <item>10 minutes</item>
    </string-array>

    <string-array name="alarm_timeout_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="user_guide">User Guide</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="open_source_licenses">Open Source Licenses</string>

</resources>
