<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.zachvg.streetsweepingreminder.summary.SummaryFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_addScheduleFragment"
            app:destination="@id/addScheduleFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_editScheduleFragment"
            app:destination="@id/editScheduleFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mainFragment_to_helpFragment"
            app:destination="@id/helpFragment" />
    </fragment>
    <fragment
        android:id="@+id/addScheduleFragment"
        android:name="com.zachvg.streetsweepingreminder.addschedule.AddScheduleFragment"
        android:label="@string/add_schedule"
        tools:layout="@layout/fragment_add_schedule" />
    <fragment
        android:id="@+id/editScheduleFragment"
        android:name="com.zachvg.streetsweepingreminder.editSchedule.EditScheduleFragment"
        android:label="@string/edit_schedule">
        <argument
            android:name="scheduleId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.zachvg.streetsweepingreminder.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/helpFragment"
        android:name="com.zachvg.streetsweepingreminder.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />
</navigation>